<resources>

    <string name="app_name">Funkcja</string>
    <string name="action_settings">Settings</string>
    <string name="a">A=</string>
    <string name="b">B=</string>
    <string name="c">C=</string>
    <string name="text1">podaj dane</string>
    <string name="rysuj">Rysuj</string>
    <string name="bad_value">zla wartosc</string>
    <string name="title_activity_now_aktywnosc">NowAktywnosc</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_draw">Draw</string>
    <string name="zero">0</string>

</resources>
